[package]
name = "mx-local-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
multiversx-sc-scenario = { version = "0.65.0", features = ["wasmer-experimental"] }


clap = { version = "4.4", features = ["derive"] }
counter = { path = "counter" }
piggybank = { path = "piggybank" }

multiversx-chain-vm = "0.22.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"